fixed the footer in the middel when on mobile; still need to fix the padding when full screen

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -399,14 +399,23 @@ body {
 
 footer {
  background-color:white;
- padding:30px 30px 30px 50px;
 }
 
 .footer-font {
   color: #3B4336;
-
-
 }
+
+@media screen and (max-width: 1050px) {
+  .footer-font {
+    color: #3B4336;
+    text-align: center;
+  }
+
+  .footer-icons{
+    margin-bottom: 40px;;
+  }
+}
+
 .icon {
   text-align:center;
   padding-top:0px;
