--- a/app/assets/stylesheets/pages/_tarifs.scss
+++ b/app/assets/stylesheets/pages/_tarifs.scss
@@ -30,6 +30,7 @@ border-top: 1px solid lightgrey;
 
 .footer-border{
   border-top: 1px solid lightgrey;
+  padding: 30px;
 }
 
 .prices-table {
